src/test/deca/syntax/invalid/illegal_char.deca

// Description :
// Caractère illégal '@'
//
// Resultats :
// Erreur lexicale
// Ligne 4 : token recognition error
// Regle : lexeur : aucun token ne matche '@'

{
  x = 1 @ 2;
}